semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad5/error.txt
error: invalid pattern
  --> rules/syntax/bad5.yaml:5
5 |       - "4"
  |         ^^^
= help: Did you mean `pattern: 4`?
invalid type for pattern expected dict but found str

run with --strict and there were 1 errors loading configs
